Update and rename project.html to index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <img src="web-design-portfolio-header.webp" alt="portfolio" class="portfolio" />
     <h1>Hi, This is My Portfolio</h1>
     <p>This site showcases my theoretical and practical learning journey. It includes my project work and internship experiences.This Website has all my current and past information and all this information are farily genuine and true to my knowledge</p>
-    <p><b>"A pot can be filled easily but a lake takes time"</b></p>
     <button onclick="window.open('https://www.linkedin.com/in/YOUR_PROFILE', '_blank')">Find Me</button>
   </section>
 
@@ -36,7 +35,6 @@
     <div class="about-text">
       <h2>About Me</h2>
       <p>Dedicated and Motivated Individual with an MBA Dual Specialization (Finance & Business Analytics). Keen interest in Accounting where i did my undergraduate degree in Bachelor of Commerce, Financial Planning & Analysis, and Business Analytics. Brings a problem-solving mindset and a creative approach to challenges.</p>
-      <p><b>"Unique mindset will not be accepted, But they won't change until they succeed"</b></p>
     </div>
   </section>
 
@@ -70,6 +68,9 @@
       <li>SPSS</li>
       <li>R Programming</li>
       <li>Technical Trading</li>
+      <li>Python</li>
+      <li>SQL</li>
+      <li>Tableau</li>
     </ul>
   </section>
 
