--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="home" id="home">
     <img src="web-design-portfolio-header.webp" alt="portfolio" class="portfolio" />
-    <h1>Hi, This is My Portfolio</h1>
+    <h1>Hi, I'm Eniyavan - MBA Graduate(Finance & Business Analytics </h1>
     <p>This site showcases my theoretical and practical learning journey. It includes my project work and internship experiences.This Website has all my current and past information and all this information are farily genuine and true to my knowledge</p>
     <button onclick="window.open('https://www.linkedin.com/in/YOUR_PROFILE', '_blank')">Find Me</button>
   </section>
@@ -34,7 +34,7 @@
     <img src="20220416104744815.jpg" alt="My Photo" class="profile-img" />
     <div class="about-text">
       <h2>About Me</h2>
-      <p>Dedicated and Motivated Individual with an MBA Dual Specialization (Finance & Business Analytics). Keen interest in Accounting where i did my undergraduate degree in Bachelor of Commerce, Financial Planning & Analysis, and Business Analytics. Brings a problem-solving mindset and a creative approach to challenges.</p>
+      <p>Dedicated and Motivated Individual with an MBA Dual Specialization (Finance & Business Analytics). Keen interest in Accounting where i did my undergraduate degree in Bachelor of Commerce. likes to explore Financial Planning & Analysis, and Business Analytics roles. Brings a problem-solving mindset, Data-Driven decision making and a creative approach to challenges situation.</p>
     </div>
   </section>
 
