--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <img src="web-design-portfolio-header.webp" alt="portfolio" class="portfolio" />
     <h1>Hi, I'm Eniyavan - MBA Graduate(Finance & Business Analytics </h1>
     <p>This site showcases my theoretical and practical learning journey. It includes my project work and internship experiences.This Website has all my current and past information and all this information are farily genuine and true to my knowledge</p>
-    <button onclick="window.open('https://www.linkedin.com/in/YOUR_PROFILE', '_blank')">Find Me</button>
+    <button onclick="window.open('https://www.linkedin.com/in/eniyavan-ravisankar-417670248', '_blank')">Find Me</button>
+    <button onclick="window.open('Eniya_resume.pdf')">View Resume</button>
   </section>
 
   <section class="about-me" id="about">
